--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "redux-boilerplate",
+  "name": "spotim-chat",
   "version": "1.0.0",
-  "description": "redux, react, boilerplate",
+  "description": "Simple chat applicaiton",
   "main": "main.js",
   "scripts": {
-    "start": "export NODE_ENV=development && webpack-dev-server --content-base src --inline --hot --port 3000",
+    "start": "export NODE_ENV=development && webpack-dev-server",
     "prod": "export NODE_ENV=production && webpack",
     "test": "jest --coverage -u -c=./configs/jest.config.js"
   },
@@ -27,6 +27,7 @@
     "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
