--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
+    "socket.io-client": "^2.0.4",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
