--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "postcss": "^6.0.16",
     "postcss-css-variables": "^0.8.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-extend": "^1.0.5",
     "postcss-flexbugs-fixes": "^3.3.0",
+    "postcss-font-magician": "^2.1.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
     "postcss-nested": "^3.0.0",
@@ -49,6 +51,7 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "socket.io-client": "^2.0.4",
     "style-loader": "^0.13.2",
