--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple chat applicaiton",
   "main": "main.js",
   "scripts": {
-    "start": "export NODE_ENV=development && webpack-dev-server",
-    "prod": "export NODE_ENV=production && webpack",
+    "start": "export NODE_ENV=production && webpack-dev-server",
+    "dev": "export NODE_ENV=development && webpack-dev-server",
     "test": "jest --coverage -u -c=./configs/jest.config.js"
   },
   "author": "Ievgen Bogomolov",
@@ -24,6 +24,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^2.1.2",
