--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^4.5.3",
     "path": "^0.12.7",
     "postcss": "^6.0.16",
+    "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-extend": "^1.0.5",
