--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple chat applicaiton",
   "main": "main.js",
   "scripts": {
-    "start": "export NODE_ENV=production && webpack-dev-server",
+    "start": "export NODE_ENV=production && webpack && node --inspect server/bin/www.js",
     "dev": "export NODE_ENV=development && webpack-dev-server",
     "test": "jest --coverage -u -c=./configs/jest.config.js"
   },
@@ -24,9 +24,12 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.9.1",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
@@ -55,12 +58,15 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
+    "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.4",
     "style-loader": "^0.13.2",
     "stylelint": "^8.4.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.8.2",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {}
