--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple chat applicaiton",
   "main": "main.js",
   "scripts": {
+    "heroku-prebuild": "npm i",
     "start": "export NODE_ENV=production && webpack && node server/bin/www.js",
     "dev": "export NODE_ENV=development && webpack-dev-server",
     "test": "jest --coverage -u -c=./configs/jest.config.js"
