--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple chat applicaiton",
   "main": "main.js",
   "scripts": {
-    "heroku-prebuild": "rm -r --cached node_modules",
+    "heroku-prebuild": "rm -rf node_modules && npm install --quiet --production",
     "start": "export NODE_ENV=production && webpack && node server/bin/www.js",
     "dev": "export NODE_ENV=development && webpack-dev-server",
     "test": "jest --coverage -u -c=./configs/jest.config.js"
