--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "author": "Ievgen Bogomolov",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "^7.2.5",
     "autoprefixer-loader": "*",
     "babel-core": "^6.17.0",
